# TemperatureConverter_Qt

./: .gitignore  CMakeLists.txt  README.md
include/: TemperatureConverter.hpp
source/: CMakeLists.txt  ScaleFactor.js  TemperatureConverter.cpp  main.cpp  main.qml  qml.qrc
source/qml/: CtoF.qml  CtoK.qml  FtoC.qml  FtoK.qml  HomePage.qml  KtoC.qml  KtoF.qml
